--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
+*, ::before, ::after {
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  line-height: 1.5;
+}
+
+main {
+  padding: 0 20px;
+}
+
+h1 {
+  font-size: 38px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 34px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+h4 {
+  font-size: 26px;
+  font-weight: 500;
+}
+
+h5 {
+  font-size: 22px;
+  font-weight: 300;
+}
+
+h6 {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 300;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (min-width: 768px) {
+  main {
+    padding: 0 80px;
+  }
 }
