--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,8 +2,8 @@ footer {
     display: grid;
     grid-template-columns: repeat(1, 300px);
     grid-template-rows: 1fr;
-    grid-auto-rows: minmax(300px, auto);
-    padding: 20px 0;
+    grid-auto-rows: minmax(auto);
+    padding: 20px 20px;
 }
 
 ul {
@@ -21,9 +21,14 @@ li > a:hover {
     color: #696767;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
     footer {
         grid-template-columns: repeat(4, 25%);
-        padding: 40px 0;
+    }
+}
+
+@media (min-width: 1024px) {
+    footer {
+        padding: 40px 100px;
     }
 }
