--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,12 +2,29 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 20px;
 }
 
-/* nav {
-    width: fit-content;
-} */
+.menu-btn {
+    font-size: 24px;
+}
+
+.nav-container {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    background: #ffffff;
+    width: 50%;
+    padding: 20px;
+    right: 100%;
+    transition: cubic-bezier(0.96, -0.01, 0, 0.99) 300ms;
+    flex-flow: column;
+}
+
+.open-menu {
+    right: 0;
+    display: flex;
+}
 
 .nav-content {
     display: flex;
@@ -15,9 +32,34 @@ header {
     gap: 8px;
 }
 
-@media (min-width: 1024px) {
+.fix-page {
+    position: fixed;
+}
+
+@media (min-width: 768px) {
+    .menu-btn {
+        display: none;
+    }
+
+    .nav-container {
+        position: static;
+        width: auto;
+        background: none;
+        padding: 0;
+    }
+
     .nav-content {
         flex-flow: row;
         gap: 16px;
+    }
+
+    .fix-page {
+        position: relative;
+    }
+}
+
+@media (min-width: 1024px) {
+    header {
+        padding: 20px 100px;
     }
 }
