--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,71 +1,93 @@
-.hero-section, .about-section {
+.hero-section {
+    background-color: #495E57;
+    color: #e2dada;
     display: flex;
     flex-flow: column-reverse;
     justify-content: space-between;
     gap: 20px;
-    padding: 20px 0;
+    padding: 20px 20px;
 }
 
-.hero-section p, .about-section p {
+.hero-section h1 {
+    color: #face14;
+}
+
+.hero-section p {
+    font-weight: 500;
     margin-top: 14px;
     margin-bottom: 22px;
 }
 
-.hero-section > div > img {
+.img-container > img {
     width: 100%;
-    height: 300px;
+    background: gray;
+    border-radius: 16px;
     object-fit: cover;
+    height: 400px;
 }
 
 .specials-section, .testimonials-section {
+    padding: 40px 20px;
+}
+
+.specials-header {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.specials-content {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: 1fr;
+    grid-auto-rows: minmax(auto);
     padding: 20px 0;
-}
-
-.specials-section > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.specials-container, .testimonials-container {
-    display: flex;
-    gap: 22px;
-    padding: 10px 0;
-}
-
-.specials-container figcaption > div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    gap: 20px;
 }
 
 .specials {
     box-shadow: 2px 2px 8px rgb(88, 86, 86);
     border-radius: 16px;
-    flex: 1;
 }
 
 .specials > img {
     width: 100%;
+    height: 300px;
     object-fit: cover;
+    background: gray;
+}
+
+.specials figcaption > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.specials > figcaption > div > h6 {
+    color: #face14;
 }
 
 .specials figcaption {
     padding: 12px;
 }
 
-.specials > figcaption > div > h6 {
-    color: #ffa500;
-}
-
 .testimonials-section > h2 {
     text-align: center;
+}
+
+.testimonials-container {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: 1fr;
+    grid-auto-rows: minmax(auto);
+    padding: 20px 0;
+    gap: 20px;
 }
 
 .testimonials {
     box-shadow: 2px 2px 8px rgb(88, 86, 86);
     border-radius: 16px;
-    flex: 1;
     padding: 12px;
 }
 
@@ -80,8 +102,20 @@
     width: 32px;
     height: 32px;
     border-radius: 50px;
-    object-fit: cover;
     background: gray;
+}
+
+.about-section {
+    display: flex;
+    flex-flow: column-reverse;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px 20px;
+}
+
+.about-section p {
+    margin-top: 14px;
+    margin-bottom: 22px;
 }
 
 .about-section > div {
@@ -90,30 +124,42 @@
 }
 
 .about-section > div > .image1 {
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
-    position: absolute;
-    bottom: -5px;
-    z-index: 10;
+    width: 100%;
+    height: 300px;
+    background: gray;
 }
 
 .about-section > div > .image2 {
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
-    position: absolute;
-    top: -5px;
-    right: 20%;
+    display: none;
 }
 
-@media (min-width: 1024px) {
-    .hero-section, .about-section {
-        flex-flow: row;
+@media (min-width: 768px) {
+    .specials-content {
+        grid-template-columns: repeat(2, auto);
+        padding: 40px 0;
     }
 
-    .hero-section p, .about-section p {
-        width: 60%;
+    .testimonials-container {
+        grid-template-columns: repeat(2, auto);
+        padding: 40px 0;
+    }
+}
+
+
+@media (min-width: 1024px) {
+    .hero-section {
+        flex-flow: row;
+        padding: 20px 100px;
+        position: relative;
+    }
+
+    .img-container > img {
+        position: absolute;
+        height: 300px;
+    }
+
+    .hero-section p {
+        width: 50%;
     }
 
     .hero-section > div, .about-section > div {
@@ -121,21 +167,44 @@
         position: relative;
     }
 
+    .specials-section, .testimonials-section {
+        padding: 60px 100px;
+    }
+
+    .specials-content {
+        grid-template-columns: repeat(3, auto);
+        padding: 40px 0;
+    }
+
+    .testimonials-container {
+        grid-template-columns: repeat(4, auto);
+        padding: 40px 0;
+    }
+
+    .about-section {
+        padding: 40px 100px;
+        flex-flow: row;
+    }
+
+    .about-section p {
+        width: 60%;
+    }
+
     .about-section > div > .image1 {
         width: 300px;
         height: 200px;
-        object-fit: cover;
-        position: absolute;
         bottom: -5px;
         z-index: 10;
+        position: absolute;
     }
 
     .about-section > div > .image2 {
         width: 300px;
         height: 200px;
-        object-fit: cover;
-        position: absolute;
         top: -5px;
         right: 20%;
+        position: absolute;
+        background: gray;
+        display: block;
     }
 }
