--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -10,4 +10,14 @@
     color: #1f1e1e;
     padding: 8px 0;
     font-weight: 500;
+    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.btn:hover {
+    box-shadow: 2px 2px 16px #1f1e1e;
+}
+
+.btn:disabled {
+    background-color: #999;
+    box-shadow: none;
 }
