--- a/src/pages/reservation/reservation.css
+++ b/src/pages/reservation/reservation.css
@@ -25,6 +25,7 @@ fieldset {
     flex-flow: column;
     gap: 4px;
     margin-bottom: 12px;
+    position: relative;
 }
 
 input[type="range"] {
@@ -37,10 +38,25 @@ input[type="range"] {
 
 input, select {
     outline: none;
-    border: 1px solid gray;
+    background: transparent;
+    border: 1px solid #808080;
     border-radius: 8px;
     padding: 8px;
     width: 100%;
+}
+
+.error {
+    position: absolute;
+    left: 4px;
+    bottom: 1px;
+    font-size: 10px;
+    font-weight: 500;
+    z-index: -1;
+    color: #ff0000;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 300ms;
 }
 
 @media (min-width: 1024px) {
