--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,31 +1,77 @@
-.about-section {
+.hero-section {
+    background: #1f1e1e99 url("../../assets//Mario\ and\ Adrian\ A.jpg");
+    background-size: cover;
+    background-position: top;
+    background-blend-mode: darken;
+    height: 50vh;
+    width: 100%;
     display: flex;
     flex-flow: column;
-    gap: 20px;
-    padding: 20px;
     justify-content: center;
     align-items: center;
 }
 
-.about-section > img {
-    width: 90%;
-    height: 300px;
-    object-fit: fill;
-    background: #1f1e1e;
-    border-radius: 16px;
+.about {
+    display: flex;
+    flex-flow: column;
+    padding: 20px;
 }
 
-.about-section > h3 {
+.about > div > h3 {
     color: #495E57;
 }
 
+.about > div > p:last-of-type {
+    margin-top: 12px;
+}
+
+.about > img {
+    display: none;
+}
+
+.chart-section {
+    padding: 20px;
+}
+
+.chart-section > h3 {
+    text-align: center;
+}
+
+/* .chart-section > div {
+    height: 400px;
+} */
+
+/* .bar-chart {
+    width: 100%;
+    height: 500px;
+    margin: auto;
+} */
+
 @media (min-width: 768px) {
-    .about-section {
+    .about {
+        flex-flow: row;
+        justify-content: space-between;
+        gap: 20px;
         padding: 20px 100px;
     }
 
-    .about-section > img {
-        width: 60%;
-        height: 600px;
+    .about > div {
+        flex: 1;
+    }
+
+    .about > img {
+        flex: 1;
+        width: 100%;
+        height: fit-content;
+        display: block;
+        width: 90%;
+        height: 300px;
+        object-fit: fill;
+        background: #1f1e1e;
+        border-radius: 16px;
+    }
+
+    .chart-section {
+        padding: 40px 100px;
     }
 }
