--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,4 +1,4 @@
-.hero-section {
+.about_hero-section {
     background: #1f1e1e99 url("../../assets//Mario\ and\ Adrian\ A.jpg");
     background-size: cover;
     background-position: top;
@@ -9,6 +9,7 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    color: #eeeeee;
 }
 
 .about {
@@ -36,16 +37,6 @@
 .chart-section > h3 {
     text-align: center;
 }
-
-/* .chart-section > div {
-    height: 400px;
-} */
-
-/* .bar-chart {
-    width: 100%;
-    height: 500px;
-    margin: auto;
-} */
 
 @media (min-width: 768px) {
     .about {
