--- a/src/pages/reservation/reservation.css
+++ b/src/pages/reservation/reservation.css
@@ -59,6 +59,48 @@ input, select {
     transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 300ms;
 }
 
+.btn {
+    display: block;
+    text-decoration: none;
+    width: 200px;
+    text-align: center;
+    align-self: center;
+    border: none;
+    border-radius: 8px;
+    background: #face14;
+    color: #1f1e1e;
+    padding: 8px 0;
+    font-weight: 500;
+    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.btn:hover {
+    box-shadow: 2px 2px 16px #1f1e1e;
+}
+
+.btn:disabled {
+    background-color: #999999;
+    box-shadow: none;
+}
+
+.status {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 16px;
+    border: 2px solid #00ff00;
+    border-radius: 16px;
+    background: #eeeeee;
+    color: #00ff00;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    font-size: inherit;
+    font-weight: 500;
+    z-index: 20;
+    transition: all ease-in-out 300ms;
+}
+
 @media (min-width: 1024px) {
     .reservation-section {
         padding: 20px 100px;
@@ -75,5 +117,9 @@ input, select {
     .banner-image {
         background: gray;
         width: 50%;
+    }
+
+    .status {
+        right: 100px;
     }
 }
