--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,5 +1,5 @@
 .about_hero-section {
-    background: #1f1e1e99 url("../../assets//Mario\ and\ Adrian\ A.jpg");
+    background: #1f1e1e99 url("../../assets/Mario\ and\ Adrian\ A.jpg");
     background-size: cover;
     background-position: top;
     background-blend-mode: darken;
